# OttoBot

./: .gitignore  README.md  config.toml  docker-compose.yml  request.http
kubernetes_manifests/: ollama.yaml  ottobot_objects.yaml  ottobot_ui.yaml
llm_service/: Dockerfile  requirements.txt  service.py
ui/: Dockerfile  app.py  pyproject.toml  requirements.txt
